--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,10 @@ dependencies {
     compile "io.ktor:ktor-server-host-common:$ktor_version"
     compile "io.ktor:ktor-server-sessions:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
+    
+    // Db
+    compile "org.jetbrains.exposed:exposed:$exposed_version"
+    compile "org.xerial:sqlite-jdbc:$sqlite_version"
+
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
