--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=1.2.0
 kotlin.code.style=official
 kotlin_version=1.3.31
 logback_version=1.2.1
+exposed_version=0.13.7
+sqlite_version=3.21.0.1
